# uv-streamlit-setup

./: README.md  hello.py  pyproject.toml
src/myproject/pkg1/: simple_fn.py
src/myproject/pkg2/: complex_fn.py
tests/: test_simple.py
